
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef TYPE_1__* res_state ;
struct TYPE_3__ {int options; } ;


 int RES_DEBUG ;
 int errno ;
 int printf (char*,int) ;

__attribute__((used)) static void
dbg_printf(char *msg, int num, res_state res)
{
 if (res->options & RES_DEBUG) {
  int save = errno;

  printf(msg, num);
  errno = save;
 }
}
